<resources>
    <string name="app_name">goodpic</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="categories">KATEGORİLER</string>
    <string name="fashion">Moda</string>
    <string name="nature">Doğa</string>
    <string name="backgrounds">Arka Plan</string>
    <string name="science">Bilim</string>
    <string name="education">Eğitim</string>
    <string name="people">İnsanlar</string>
    <string name="feelings">Duygular</string>
    <string name="religion">Bölgeler</string>
    <string-array name="tab_titles">
        <item>KATEGORİLER</item>
        <item>POPÜLER</item>
        <item>YENİ EKLENENLER</item>
        <item>EDITORUN TAVSİYESİ</item>
    </string-array>
    <string-array name="categories">
        <item name="fashon">fashion</item>
        <item name="fashion">nature</item>
        <item name="fashion">backgrounds</item>
        <item name="fashion">science</item>
        <item name="fashion">education</item>
        <item name="fashion">people</item>
        <item name="fashion">feelings</item>
        <item name="fashion">religion</item>
        <item name="fashion">health</item>
        <item name="fashion">places</item>
        <item name="fashion">animals</item>
        <item name="fashion">industry</item>
        <item name="fashion">food</item>
        <item name="fashion">computer</item>
        <item name="fashion">sports</item>
        <item name="fashion">transportation</item>
        <item name="fashion">travel</item>
        <item name="fashion">buildings</item>
        <item name="fashion">business</item>
        <item> music</item>
    </string-array>
</resources>
