<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/categories">
        <menu>
            <item
                android:id="@+id/fashion"
                android:title="@string/fashion" />
            <item
                android:id="@+id/nature"
                android:title="@string/nature" />
            <item
                android:id="@+id/backgrounds"
                android:title="@string/backgrounds" />
            <item
                android:id="@+id/science"
                android:title="@string/science" />
            <item
                android:id="@+id/education"
                android:title="@string/education" />
            <item
                android:id="@+id/people"
                android:title="@string/people" />
            <item
                android:id="@+id/feelings"
                android:title="@string/feelings" />
            <item
                android:id="@+id/religion"
                android:title="@string/religion" />
        </menu>
    </item>

</menu>
